<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/content_bg"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/top_bar"
        android:layout_marginTop="@dimen/mag_ch_pd_top"
        android:orientation="vertical"
        android:padding="@dimen/pd_ch_pd" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal"
            android:padding="@dimen/pd_ch_editext" 
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/oldpassword"
                android:textSize="@dimen/textcontentsize" />

            <EditText
                android:id="@+id/original"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="3"
                android:background="@drawable/edittext_bg"
                android:ems="10"
                android:inputType="textPassword" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal"
            android:padding="@dimen/pd_ch_editext"
            android:gravity="center_vertical" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/newpassword"
                android:textSize="@dimen/textcontentsize" />

            <EditText
                android:id="@+id/newword"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="3"
                android:background="@drawable/edittext_bg"
                android:ems="10"
                android:inputType="textPassword" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal"
            android:padding="@dimen/pd_ch_editext"
            android:gravity="center_vertical" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/yespassword"
                android:textSize="@dimen/textcontentsize" />

            <EditText
                android:id="@+id/reinputnew"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="3"
                android:background="@drawable/edittext_bg"
                android:ems="10"
                android:inputType="textPassword" />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/top_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:gravity="center_vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/content_bar"
            android:gravity="center"
            android:padding="@dimen/title_pd"
            android:text="@string/changepassword"
            android:textColor="@color/white"
            android:textSize="@dimen/titlesize" />

        <ImageView
            android:id="@+id/back"
            android:clickable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/pd_ch_editext"
            android:padding="5dp"
            android:src="@drawable/back_48" />
    </RelativeLayout>

    <Button
        android:id="@+id/sure_bt"
        android:layout_width="@dimen/bt_wight"
        android:layout_height="@dimen/bt_height"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/mag_ch_bt_bom"
        android:background="@drawable/btn_bg"
        android:paddingBottom="@dimen/bt_pb"
        android:paddingLeft="@dimen/bt_pl"
        android:paddingRight="@dimen/bt_pr"
        android:paddingTop="@dimen/bt_pt"
        android:text="@string/sure_bt"
        android:textSize="@dimen/bttextsize" />

</RelativeLayout>